- Agregado clase para imagenes circulares - Agregado imagen por defecto para usuario
- Add class to create circle images
- Add default user image

--- a/TFG-Client/MainFormProgram.resx
+++ b/TFG-Client/MainFormProgram.resx
@@ -393,4 +393,76 @@
         r7hIJk2aJFOmTAEC6X8JjRawtmnTJvu/aLTgNsKTRqPRym4i/x/cXT52/mIuvwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="myOwnCircleComponent1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAJAAAACKCAYAAABFC8NFAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAD2RJREFUeF7tndeLFU0Th805rTnntOa4a06YkBVRd10TohiuFERExQtRdPdC9EYF
+        QdR/tT+eeSmY71i7Z2Y6TM/Zvnh4fZ0zM91VP7urq8OMO3PmjEkkqpIElLAiCShhRRJQwookoIQVSUAJ
+        K8aUgE6dOmV6enrMzp07zfr1682KFSvMkiVLzMKFC01XV5eZNWuWmTp1qpk4cWIGf+bv5s2bl/2G365c
+        uTK7l2fwLJ6pvWus0NECOnTokNmyZYtZunSpmT17tpkwYUImhB07dpgLFy6YBw8emBcvXpi3b9+aDx8+
+        mM+fP5tv376ZX79+ZfBn/o5r/Ibfcs+lS5fMtm3bsmfxTJ7NO3gX79TK0ql0lIBOnDhhuru7s5Zl5syZ
+        Zs6cOebgwYPm4cOHZnh42Pz9+9cLPJt39Pb2mrlz52bvpgyUhTJpZe0UOkJAdCe0AOPGjTN79uwx9+7d
+        8yqYdvBuyrBr166sTIiJMmplbzqNFRAty5o1a8z06dPNhg0bzO3bt833799Vh9YJZUJMa9euNTNmzDCr
+        Vq3Kyq7VqYk0TkD79+/PWhu6ib6+PjM0NKQ6LkYo65UrV7KyL1++PKuLVscm0RgB7d27NxMOI6KBgQHz
+        588f1UlNgLLfunUrqwt1om5anZtA9AJiqLxs2TKzYMGCrJvSHNJk6N4kRUBdNRvETNQCIraZNGmS6e/v
+        V43fSQwODmZ1JVbSbBErUQqIPA25lQMHDpivX7+qBu9EqCutEKkAbKDZJjaiEhBZXYa8xAXPnz9XjTwW
+        oO5022S9Y890RyOgffv2ZYk/DKYZdSyCXQi0sU2rvWIhCgGRsaX/v3//vmrIscyjR48y22zatEm1Xd3U
+        LiDyISQEP336pBow8Tezzbp167IuTbNhndQmIOaIFi9ebI4ePaoaLfEvYrOY5tdqEdDhw4fN/PnzzcWL
+        F1VDJUaG7Du2w4aabUMTXEDMA5HKv379umqgRHtu3LiRrVOKYU4tqIAYTUyZMiXLvmqGSRSHdUkseKt7
+        hBZMQKyVYTaadTOaQRLlefLkSWZTbKvZPARBBESgTI7n5s2bqiES1blz505mW2ys2d433gVEYpCJ0MuX
+        L6sGSNhz9erVzMZ1ZK29C4iU/NmzZ9WKJ9yBjbG15gOfeBUQuxd2796tVjjhHhaokZTVfOELbwJiNpl5
+        nB8/fqiVTbgHW5MjCjmT70VAJLkYrr98+VKtaMIf2JzhfahEoxcBkW4nsNMqmPAPC/DwgeYb1zgX0MaN
+        G7PtLFrFEuFgexMTsJqPXOJUQCS02BLMbk6tUolw4AN84TvJ6FRArCS8du2aWqFEeNi9gk80X7nCmYC2
+        b9+ere3RKhIz79+/N8+ePcv2a2lwjd9o9zYBlgjjG81nLnAioNOnT2ezwxw+oFUiJmja2ZPFJCTzSGw9
+        LgK/5R7ubVJqAp/gG3yk+c4WJwIicKav1SoQC69evcoE0CoMthpzqobW+gDX+E3rfTyLZ2rvig3myXwF
+        1NYCYv6FvMPHjx/VwtcNTt66dev/OZ+doKwKKNOS0HJxD/fmn8WzYxcSvsFHPubKrAXE5j/+NWoFrxPE
+        wb88cTSHMNCiuOh+eAbP4pnyfN4Vc9dGD4GvNB/aYC0gYoN3796pha4Lgl62C4tzXQmnFRGSvId3xhpw
+        4yN8pfnQBisBbd68OZt30QpcF3Qz4lBil7I5qdevX2do10aCd+TjpFgXzdFT4DPNl1WxEhDbj9+8eaMW
+        tg7y4qFL0X6ThxZERmRyXx5alDKtV77LjFFE+IrFZ5ovq1JZQKTKY8r75MVTxHlPnz5Vh/GMuiAf36xe
+        vbpwq1S2HKHBZ/hO82kVKguITW6x7KxgFFTGaXknIxb+X2tleG6+a6JFQnitv2sl//zYRmjs6HC5ZqiS
+        gEhKTZ48OYqTM3C8tCR0N9pv8iAAcW4RsRHfnDt3LlsyWuY+7uG3lK1oFxgCfIbvXCUWKwmII27Jf2gF
+        DI3keMjPaNdbkdEZsY92fTS4R0RRJDindeP3sdhK4MBPfKj5tiyVBMTa28ePH6uFC4l0FcQrRf6VS+tD
+        a6JdL4IkEou0dpRJYqkirVYo8B0nomm+LUtpAdH0cbj2z58/1cKFIt91FYlLQHI2RZw/EhJvEVhr11sR
+        kcfUleE7fOiiGystICJ4gjCtYCERMdBNaNc1pEuxDWx5BmjXNOS9NsJ1DT50MRorLSDO8OMzAVqhQiKt
+        Txkx1CUgabUos3a9Dvhcg4vzGEsLiCC07sXy0i0wxNauj0RdAgJJB8QSC+HDRYsWqT4uQykBnTx5Mus7
+        f//+rRYqFBLIlh1J1SkgGcEVHS36Bh/iS3yq+boopQTEJkE2C2oFCok4sGxQ6kJADN95BqMr7fpIUFYp
+        t3a9Djg2D59qvi5KKQHxwroPwZR4omz3BS5GYZIKQIza9dGQbsy2BXSF+LTVz2UoJSAMcPfuXbUwoRAR
+        kOnVro+GxE423YhkmKuI0OZeH+BL20C6lIDYrFZ3AC3xT9HcTx5pvRgIaNeLQP6HZ1RpRVwI2CX40jah
+        WEpADEO/fPmiFiYUNnGMLLeo0v0I0g0VWS7SigjY5v0uwZccN6j5uiiFBcTJoEzCaQUJCQ4A7Vo7XATR
+        tiKwKb8P8KnNqa+FBcSBjsyBaYUIiY0DkoD+BZ/aHNZZWED02wRcWiFCYuMACWJZgVh2qStwj6xerBoI
+        25TfByy0x7eaz4tQWEAcmBDDsgQbByAAmR2vEkjLUhCeUUWAYFN+H7CsA99qPi9CYQGxPTaG0YMEsVVn
+        ttk1IU4s84x8IrDqzgt5RixBNHCqmc3W58ICovU5cuSIWoiQuIhj5Bll5qVkCG7jfNv4yQfHjx/PfKv5
+        vAiFBcT2Zf6rFSIkMhS3mZQUMZTpkvmtq/fGkgcCVlaIb6tQWEDsrY7hX45MSlbJRAt0JRILFZmQFcdz
+        T9WuE0T8ZSeBfcLxy5q/i1KqBYrhuF7pBoquCByJ/OL60bpDeR9UyX7nkSC8agDug2AtUCwxEEjrYeuI
+        IvGUCKjK5G0eyspzbNZj+yBYDBTLKAykK7CdlCwjINvuWyaBq0yB+CTYKCyWPBCIU20mRSGkgKT7Gu1d
+        dRAsD0TrQyCtFaIOZKOfzahIZtbb5XX4DWjXiiBBuK0IfRAsEx3LXJggTqnaCsm0RpGYRMRadeQnrY+N
+        2H3BXvkgc2GxzMbnEceWiYVobfKncRTpUqQbA7rxMt2QxD62Qbgvgs3GQwzrgfKIYylXu26I01YlGQiM
+        5MoMy3mXjP6AZ7VrUShTle1HocCXlE/zdVFKCYjVa3WvSGxFuiItL8TQmRZAuhBABPxdlYQg93BvXkg8
+        m79rTSnwW4mxbJKePsGXtudIlxJQDGuiW8FR0pXJEFkcLU4GfkMGuIpwWuEZtD7yXiEvTEk1YDMX7/RB
+        8DXRsoJfK0yd0FVIq0B8k29xcKTP7oNni1iAd0uMRZnada11kvdpVUoJiD1EDPu0wtRNXkTAkDlk3MG7
+        JK/UBPFA8H1hsexMHQmcKCIi/gg554RYJOZpgnhq2ZkKMQbSeXCcxCaMMGwnQNvRGm8R88QuHnCxpQdK
+        C4igi5MdtELFAk7NdycMuX20RgTS+XiLjG6sAXMrLONwcfB4aQFxpkwMi+uLgIPzcRHBrW1chEBahcM7
+        2uWEYoNpqVrOB4rlhLKi4HBGSXkh4Xz+juRikZaJZ3DML/dIYlCEkx+6NwV8N378+HpOKAPOlYnhjMQy
+        4GSc3Zq7AURBNyfQUsmf8y2NQJxDTilkkO4SfMd3xDTflqWSgFgCwBoSrXBNgCCX7DBCaBXHSPBb7mlC
+        gNwO/FfrKa00fUzCxXBOtAuIi2hRaKFa4VrTuqjRwGd8kt1F9wWVBAScVM+p51ohE/ESxUn1QAQf0/qg
+        RDGi+VYG8OWXmL7WkxidqL7WA3x7CjVrhU3EB77q7u5WfVkVKwEBQ+DYvliY+Bd8xNebNR/aYC0g0uGs
+        qdUKnYgHfOT6a4VgLaDYv9qc+O+rzdOmTYvzq83AvMrhw4fVwifqhykYm+3Lo+FEQCSl6F9fvHihViBR
+        H/iEkZerxGErTgQETG3E9A3VxH8w52WzdbkdzgQErPAfGBhQK5IIz7Vr17IZA81XrnAqoN7eXjNx4sTG
+        zlJ3EvgAX+ATzVeucCogIFhLycX6wQe+Auc8zgUErKHp7+9XK5bwz9WrV519E7UdXgTEkJ4lAzEvvu9U
+        sDl5OXyg+cY1XgQEO3bsMPPnz++otTSxg62xObbXfOIDbwICPk7H8lCtsgn3YGtsrvnCF14FBKwZOn/+
+        vFrhhDs4ANXVOucyeBcQ8y8E1QR2WsUT9rDHi40OPua62uFdQHDs2LEsnX7nzh3VAInqcMLGvHnzMhtr
+        tvdNEAEBCS32UT158kQ1RKI82BKb+k4WjkYwAQFBHsP7Bw8eqAZJFAcbMlzHppqtQxFUQMDCJj6zmHZ0
+        VOf69evZ6gebwzFdEVxAQJKLfEVfX59qoMTIXLx4MbNdqERhO2oREHAyKF+B5r+aoRL/gq1Ii9icquqa
+        2gQksNyAFY2fPn1SjZb4m9kGG/lemlGF2gUEHLU2adIk8+jRI9WAYxlsgm1cb8dxRRQCAkYT5Ipi+KRU
+        LGCXrq6u2kdaoxGNgIBMKul4+vnnz5+rRh0LUHdsQJdVR3a5DFEJSGA2ee7cuaanp6djTgApAnVldEXd
+        Q86o2xClgASO0qP/HxwcVA3eSbAAj7q6OLcwJFELCGiFaM6ZkL13755q/CZDnUhnUEfqqtkgZqIXkMAJ
+        qBiZiUMOg/rz54/qkCZA2akDATJ1svleV900RkACn2gkuGQ6hBPEhoaGVCfFCGUl+z579uysDtRFq2OT
+        aJyABOaBOLeQ2WiSbHQF379/Vx1XJ5SJslFGysrpYDHMYbmisQLKs3PnzuxfNIdhkjPBYcPDw6pDQ8C7
+        KQMtDGWibJRRK3vT6QgBCcwRkbHFYcxWMxzmU+UcAu5TUDybd/Au4hreTUtDWWKat/JBRwmolUOHDmWf
+        POAjKGS5OSCdEQ9fKeZzDayp4fCBt2/fmg8fPmS7Ob99+2Z+/fqVwZ/5O67xG37LPXysnzwNy0g5sJtn
+        I1rexTu1snQqHS2gVsjqMlSmO2H3Ak4n840QpOUgTmFLMHCmDuLgGr9hxETLwtwdz+BZsWeKfTOmBJRw
+        TxJQwookoIQVSUAJK5KAElYkASWsSAJKWJEElLAiCShhRRJQwookoIQVSUAJK5KAEhacMf8DOR/rcgP/
+        DL0AAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
